--- a/static/style.css
+++ b/static/style.css
@@ -140,6 +140,10 @@ a.symbol:before {
     opacity: 0.6;
     line-height: 44px;
 }
+#resume-link{
+    color: #FBE3C4;
+    font-smoothing: antialiased;
+}
 .social a:hover {
     opacity: 1;
     color: #FBE3C4;
